✨ feat: emailcode
